--- a/TypeCheckerGenerator/latex/Substitution.tex
+++ b/TypeCheckerGenerator/latex/Substitution.tex
@@ -85,9 +85,10 @@ the scope of the entities we will substitute into the target.
 
 We are able to look up individual variables in a substitution, in section
 \ref{section-thinnings} we explained that this is just a special case of
-using a thinning to select from a subsitution but having dedicated syntax
-is often more convenient and improves readability.
-
+using a thinning to select from a subsitution. We also capture a key notion
+that there is a type that describes scoped things on which we may perform
+substitutions.
+\hide{
 \begin{code}%
 \>[0]\AgdaFunction{lookup}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -107,10 +108,7 @@ is often more convenient and improves readability.
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \end{code}
-
-We also capture a key notion that there is a type that describes scoped
-things on which we may perform substitutions.
-
+}
 \begin{code}%
 \>[0]\AgdaFunction{Substitutable}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -137,11 +135,9 @@ things on which we may perform substitutions.
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaBound{γ'}\<%
 \end{code}
-
 Finally, we acknowledge that given two scope transformations, we can define
 a type to represent composition, which leads us nicely to a definition for
 composition of substitutions.
-
 \input{../../TypeCheckerGenerator/latex/Composition.tex}
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{[\AgdaUnderscore{}]\AgdaUnderscore{}∘σ\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -183,16 +179,10 @@ composition of substitutions.
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{σ'}\<%
 \end{code}
-
-Although we will not use the definitions of Substitutable and Composable for
-term substitution as we will soon see, these concepts will be useful in later
-defintitions.
-
 Here we have paid attention to the types in particular to aid readability of
-later definitions. This can be seen in our final definition here which states
-that given that some $T$ is substitutable, then we are able to compose the
-subsitutions.
-
+later definitions. This can be seen in the type of our final definition here
+which states that if some $T$ is substitutable, then we are able to compose
+the subsitutions.
 \hide{
 \begin{code}%
 \>[0]\AgdaFunction{lookup}\AgdaSpace{}%
@@ -218,6 +208,3 @@ subsitutions.
 \AgdaBound{v}\<%
 \end{code}
 }
-
-\usebox{\composable}
-
