--- a/TypeCheckerGenerator/latex/TermSubstitution.tex
+++ b/TypeCheckerGenerator/latex/TermSubstitution.tex
@@ -74,7 +74,6 @@ Following our generic notion of substitution, we now specialise our
 our definiton to substitute computations. We supply the usual thinning
 and weakening mechanics that we rely on as well as defining the identity
 substitution.
-
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇒\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -114,7 +113,6 @@ substitution.
 \AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \end{code}
-
 \hide{
 \begin{code}%
 \>[0]\<%
@@ -154,18 +152,13 @@ substitution.
 \AgdaInductiveConstructor{ze}\<%
 \end{code}
 }
-
 We also define the action of such a substitution on a term, where most cases
 recurse on direct substructures as one might expect except for two cases of
-interest. The first is that we must ensure we alter the substitution accordingly
-as we pass under binders, introducing an identity substitution for the newly
-bound variable but first fixing up the scope of the substitution we already have.
-The second is where we find some variable and perform the actual substitution.
-Here we do not use the Substitutable type defined previously as the target of
-substitution may be either a construction or a computation, however the objects
-we are substituting in are always computations. This type is reserved for use
-later.
-
+interest that we show here. The first is that we must ensure we alter the
+substitution accordingly as we pass under binders, introducing an identity
+substitution for the newly bound variable but first fixing up the scope of
+the substitution we already have. The second is where we find some variable
+and perform the actual substitution.
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -180,8 +173,6 @@ later.
 \AgdaFunction{Term}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\<%
-\\
-\>[0]\AgdaComment{-- ...}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -209,10 +200,7 @@ later.
 \AgdaInductiveConstructor{compu}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaBound{v}\<%
-\\
-\>[0]\AgdaComment{-- ...}\<%
 \end{code}
-
 \hide{
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
